--- a/examples/javascript/Makefile
+++ b/examples/javascript/Makefile
@@ -1,12 +1,12 @@
-CWD := $(shell pwd)
 ARGS := ""
+BUILDDIR := build
+CWD := $(shell pwd)
+SOURCEDIR := docs
+SPHINXOPTS :=
+SPHINXPROJ := sooty
 
 .PHONY: all
 all: clean
-
-.PHONY: start
-start: env
-	@env/bin/python3 anydb $(ARGS)
 
 .PHONY: install
 install: env
@@ -20,7 +20,7 @@ reinstall: uninstall install
 
 env:
 	@virtualenv env
-	@env/bin/pip3 install -r ./requirements.txt
+	@env/bin/pip3 install -r requirements.txt
 	@echo ::: ENV :::
 
 .PHONY: freeze
@@ -29,7 +29,8 @@ freeze:
 	@echo ::: FREEZE :::
 
 .PHONY: build
-build: dist
+build: env clean html man latexpdf
+	@echo ::: BUILD :::
 
 dist: clean install
 	@env/bin/python3 setup.py sdist
@@ -47,10 +48,23 @@ link: install
 
 .PHONY: unlink
 unlink: install
-	-@rm -r $(shell find . -name '*.egg-info') 2>/dev/null | true
+	@rm -r $(shell find . -name '*.egg-info')
 
 .PHONY: clean
 clean:
 	-@rm -rf */__pycache__ */*/__pycache__ README.rst dist build \
 		example/.tmp *.egg-info >/dev/null || true
 	@echo ::: CLEAN :::
+
+.PHONY: serve
+serve: env clean html
+	@cd $(SOURCEDIR)/$(BUILDDIR)/html && $(CWD)/env/bin/python3 -m http.server
+
+.PHONY: help
+help:
+	@$(SPHINXBUILD) -M help $(SOURCEDIR) $(BUILDDIR) $(SPHINXOPTS) $(O)
+
+.PHONY: Makefile
+%: Makefile
+	@cd $(SOURCEDIR) && sphinx-build -M $@ ./ $(BUILDDIR) $(SPHINXOPTS) $(O)
+	@echo ::: $@ ::: | tr '[:lower:]' '[:upper:]'
