--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Markdown>=3.0.1
-PyYAML==3.13
-commonmark>=0.7.3
-docutils>=0.11
-pydash==4.7.4
-sphinx>=1.3.1
-unify==0.5
-yapf==0.28.0
+Markdown>=3.1.1
+commonmark>=0.9.0
+pydash>=4.7.5
+sphinx>=2.2.0
+unify>=0.5
+yapf>=0.28.0
