--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+# markdown-checklist>=0.4.1
+# markdown-strikethrough>=0.1.1
 # mdx_unimoji>=1.0
 Markdown>=3.1.1
 commonmark>=0.9.0
-markdown-checklist>=0.4.1
-markdown-strikethrough>=0.1.1
 pydash>=4.7.5
 pyyaml>=5.1.2
 sphinx>=2.2.0
